# playfair

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  ngram_score.py  playfair.cpp  playfair.h  playfaircrack.cpp  playfaircrack.h  scoretext.cpp  scoretext.h
test/: CMakeLists.txt  test_playfair.cpp  test_playfaircrack.cpp  test_scoretext.cpp
